Fixed shift cells

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -36,17 +36,20 @@
   }
 
   $days:
-    "mon" 0,
-    "tue" 101px,
-    "wed" 202px,
-    "thu" 303px,
-    "fri" 404px,
-    "sat" 505px,
-    "sun" 606px;
+    "mon" 1,
+    "tue" 2,
+    "wed" 3,
+    "thu" 4,
+    "fri" 5,
+    "sat" 6,
+    "sun" 7;
 
-  @each $day, $shift in $days {
+  @each $day, $index in $days {
     &--start-day-#{$day} &__cell:nth-child(1) {
-      margin-left: $shift;
+      margin-left: calc(
+        (#{$index} - 1) * #{$cell__size} +
+        (#{$index} - 1) * #{$gap}
+      );
     }
   }
 
